--- a/src/App.css
+++ b/src/App.css
@@ -52,3 +52,17 @@ html, body, #root {
         top: 20px;
     }
 }
+
+.link-button {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    display: inline;
+    margin: 0;
+    padding: 0;
+}
+
+.link-button:hover,
+.link-button:focus {
+    text-decoration: underline;
+}
